<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="jefferyvicente.meetup.newEventInfo"
    android:background="#f1e9dc">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name_editText"
        android:layout_alignParentStart="true"
        android:hint="Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/details_editText"
        android:layout_below="@+id/name_editText"
        android:layout_alignParentStart="true"
        android:hint="Details" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/location_editText"
        android:layout_below="@+id/details_editText"
        android:layout_alignParentStart="true"
        android:hint="Location"
        android:clickable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date_editText"
        android:layout_below="@+id/location_editText"
        android:hint="Date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/time_editText"
        android:layout_below="@+id/date_editText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/date_editText"
        android:hint="Time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pick Invitees"
        android:id="@+id/invite_textView"
        android:layout_below="@+id/time_editText" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/invitee_listView"
        android:layout_below="@+id/invite_textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Event and Notify Invitees"
        android:id="@+id/saveEvent_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
